// Copyright 2022 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.chrome.uiauto.oobe;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/chrome/uiauto/oobe";

// HidDetectionService provides functions for interacting with the Quick
// Settings on ChromeOS devices.
service OobeService {
  // HidPreconnectedTouchscreenOnly will navigate to the detailed Network view
  // within the Quick Settings. This is safe to call even when the Quick Settings
  // are already open.
  rpc HidPreconnectedTouchscreenOnly(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

